fixed text wrapping issue in index page

--- a/style/style.css
+++ b/style/style.css
@@ -103,7 +103,8 @@ dl dt {
     /* width: 25%; */
     margin-left: 10px;
     font-weight: bold;
-    color: var(--default-bg)
+    color: var(--default-bg);
+    overflow-wrap: break-word;
 }
 
 dl dd {
